--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -42,24 +42,27 @@ body h1{
 	font-family: 'Poppins';
 	margin: 15px;
 }
-.listado-evaluados{
+.listado-evaluados, .listado-resultados{
 	margin: 10px auto;
 }
-.listado-evaluados th{
+.listado-evaluados th, .listado-resultados th{
 	background: #29a370;
 	padding: 5px;
 	font-family: 'Poppins';
 }
-.listado-evaluados td{
+.listado-evaluados td, .listado-resultados td{
 	background: #e3e3e3;
 	padding: 5px;
 	text-align: center;
 	font-family: 'Roboto';
 }
-.listado-evaluados td a{
+.listado-evaluados td a, .listado-resultados td a{
 	background: #29a370;
 	color: #fff;
 	padding: 5px;
+}
+.listado-evaluados td a:hover, .listado-resultados td a:hover{
+	background: #1f73ab;
 }
 /* ---- CALIFICAR ---- */
 .calificar a{
@@ -130,3 +133,13 @@ body h2{
 	margin: 10px auto;
 	padding: 15px;
  }
+
+ .resultado-individual a{
+	display: inline-block;
+	background: #29a370;
+	color: #fff;
+	padding: 5px;
+	margin: 10px;
+	text-decoration: none;
+	font-family: 'Poppins';
+}
