--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -142,6 +142,11 @@ body h2{
 .calificar form input[type="radio"]:checked + label{
 	background-color: #58ba83;
 }
+.calificar form .form-group .aclaraciones{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
 .calificar form .submit{
 	background-color: #77aac9;
 	border: none;
